--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -179,13 +180,12 @@
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <Button
+                        <ImageButton
                             android:id="@+id/btn_Forward"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
                             android:layout_weight="0"
-                            android:text="Button"
-                            tools:text="^" />
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -204,13 +204,12 @@
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <Button
+                        <ImageButton
                             android:id="@+id/btn_Left"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
                             android:layout_weight="0"
-                            android:text="Button"
-                            tools:text="<" />
+                            app:srcCompat="@drawable/ic_baseline_arrow_left_24" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -218,13 +217,12 @@
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <Button
+                        <ImageButton
                             android:id="@+id/btn_Right"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
                             android:layout_weight="0"
-                            android:text="Button"
-                            tools:text=">" />
+                            app:srcCompat="@drawable/ic_baseline_arrow_right_24" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -243,13 +241,12 @@
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <Button
+                        <ImageButton
                             android:id="@+id/btn_Reverse"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
                             android:layout_weight="0"
-                            android:text="Button"
-                            tools:text="v" />
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
