--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,10 @@
                 android:orientation="vertical"
                 android:visibility="gone"></LinearLayout>
 
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
             <LinearLayout
                 android:id="@+id/block_CtrlRemote"
                 android:layout_width="match_parent"
@@ -181,7 +185,21 @@
                             android:orientation="horizontal"></LinearLayout>
 
                         <ImageButton
+                            android:id="@+id/btn_ForwardLeft"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_weight="0"
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
+
+                        <ImageButton
                             android:id="@+id/btn_Forward"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_weight="0"
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
+
+                        <ImageButton
+                            android:id="@+id/btn_ForwardRight"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:layout_weight="0"
@@ -197,15 +215,15 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" >
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal"></LinearLayout>
+                            android:layout_weight="3"
+                            android:orientation="horizontal" />
 
                         <ImageButton
                             android:id="@+id/btn_Left"
+                            android:layout_centerHorizontal="true"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:layout_weight="0"
@@ -214,8 +232,8 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal"></LinearLayout>
+                            android:layout_weight="0.5"
+                            android:orientation="horizontal" />
 
                         <ImageButton
                             android:id="@+id/btn_Right"
@@ -223,12 +241,11 @@
                             android:layout_height="75dp"
                             android:layout_weight="0"
                             app:srcCompat="@drawable/ic_baseline_arrow_right_24" />
-
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal"></LinearLayout>
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:orientation="horizontal" />
                     </TableRow>
 
                     <TableRow
@@ -241,18 +258,26 @@
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <ImageButton
-                            android:id="@+id/btn_Reverse"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:layout_weight="0"
-                            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:orientation="horizontal"></LinearLayout>
+                            android:orientation="horizontal">
+
+                            <ImageButton
+                                android:id="@+id/btn_Reverse"
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_weight="0"
+                                app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:orientation="horizontal"></LinearLayout>
+
+                        </LinearLayout>
                     </TableRow>
 
                 </TableLayout>
