--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res/uk.co.nhickling.imriescar"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -73,6 +74,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pedal" />
+                    <LinearLayout android:layout_weight="1" />
 
                     <Switch
                         android:id="@+id/sw_nerd_gear"
@@ -90,6 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Switch" />
+                    <LinearLayout android:layout_weight="1" />
 
                     <Switch
                         android:id="@+id/sw_nerd_manual"
@@ -107,7 +110,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView" />
-
+                    <LinearLayout android:layout_weight="1" />
                     <TextView
                         android:id="@+id/lbl_Amp"
                         android:layout_width="wrap_content"
@@ -128,19 +131,33 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <TextView
-                android:id="@+id/lbl_Speed"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:orientation="horizontal">
 
-            <SeekBar
-                android:id="@+id/sb_SpeedLimit"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:max="100"
-                android:progress="20" />
+                <uk.co.nhickling.imriescar.GaugeView
+                    android:id="@+id/gauge_Volt"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="0"
+                    custom:unitOfMeasure="V" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+
+                <uk.co.nhickling.imriescar.GaugeView
+                    android:id="@+id/gauge_Amp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="0"
+                    custom:lowBarColor="#FFCECECE"
+                    custom:maxValue="3"
+                    custom:minValue="0"
+                    custom:unitOfMeasure="A" />
+
+            </LinearLayout>
 
             <Switch
                 android:id="@+id/sw_RemoteControl"
@@ -158,10 +175,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:visibility="gone"></LinearLayout>
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
 
             <LinearLayout
                 android:id="@+id/block_CtrlRemote"
@@ -253,31 +266,38 @@
                         android:layout_height="match_parent">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:orientation="horizontal"></LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
+                        <ImageButton
+                            android:id="@+id/btn_ReverseLeft"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_weight="0"
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
 
-                            <ImageButton
+
+                        <ImageButton
                                 android:id="@+id/btn_Reverse"
                                 android:layout_width="75dp"
                                 android:layout_height="75dp"
                                 android:layout_weight="0"
                                 app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
 
+                        <ImageButton
+                            android:id="@+id/btn_ReverseRight"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_weight="0"
+                            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
+
                             <LinearLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:orientation="horizontal"></LinearLayout>
-
-                        </LinearLayout>
                     </TableRow>
 
                 </TableLayout>
